feat(athena): founder architecture refactor - core + signal augmentation separation
- Add DeepSeek R1 for reasoning with visible trace
- Add Qwen3 (pending - API key needed)
- Refactor to Founder Architecture:
  - CORE_PROVIDERS: MiniMax, DeepSeek R1, Claude (always active)
  - SIGNAL_AUGMENTATION: Vanta, xAI, Desearch, MANTIS (confidence only)
  - CONDITIONAL: Perplexity, Numinous, Gopher (on-demand)
  - FORECASTING: Precog as confidence modifier only
- Simplify routing: hypothesis → evidence → adjudication
- Update orchestrator with new architecture flow
- Update types and router for new structure

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -207,29 +207,98 @@
 
 ---
 
+## Evening Session — 8:30 PM+
+
+### DeepSeek R1 Integration (COMPLETED)
+**Committed:** `d362daf`
+
+**Changes:**
+1. Added `providers/deepseek.ts` — DeepSeek R1 reasoning model
+2. Updated routing:
+   - Reasoning path: `['deepseek', 'claude']`
+   - Trading decisions: `['deepseek', 'vanta', 'desearch']`
+   - DeepSeek weight: 0.88
+3. R1 provides visible reasoning traces for transparency
+
+### Qwen3 Integration (COMPLETED 8:53 PM)
+**Committed:** `TBD`
+
+**Changes:**
+1. Added `providers/qwen.ts` — Qwen3 agentic reasoning model
+2. Updated routing:
+   - Reasoning path: `['deepseek', 'qwen', 'claude']`
+   - Trading decisions: `['deepseek', 'qwen', 'vanta', 'desearch']`
+   - Portfolio analysis: `['chutes', 'qwen', 'deepseek']`
+   - Qwen weight: 0.80
+3. Qwen provides agentic workflows + multi-step task execution at 1/10th Claude's cost
+
+### Oracle Architecture Discussion (8:40-8:50 PM)
+
+**User Requirements Confirmed:**
+1. **Dual-mode responses:**
+   - Simple mode (default for clients): 1-2 sentences + emoji indicators
+   - Deep mode (advisors/power users): Full reasoning trace + signals + citations + methodology
+2. **Toggle UX:** "🔬 Deep Research" button expands detailed analysis
+3. **Position vs Hazel:** Maven Oracle focuses on portfolio intelligence + signals + transparency; Hazel handles meetings/notes/tax. Complementary positioning for Altruist relationship.
+
+**Complete Athena Architecture:**
+```
+Layer 1: Classify & Route (query → optimal path)
+Layer 2: Parallel Execution
+  - Speed: MiniMax → Groq (15-50ms)
+  - Reasoning: DeepSeek R1 → Qwen3 → Claude (2-8s)
+  - Deep: Perplexity (2-10s)
+  - Cost: Chutes (1-3s)
+  - Signals: Vanta, xAI, Desearch, MANTIS (parallel)
+Layer 3: Weighted Consensus Synthesis
+Layer 4: Dual-mode Response (Simple/Deep)
+```
+
+**Provider Status:**
+| Provider | Status | Cost/M | Latency |
+|----------|--------|--------|---------|
+| MiniMax | ✅ | $0.02-0.15 | 15-50ms |
+| Groq | ✅ | $0.05-0.30 | 10-100ms |
+| DeepSeek R1 | ✅ | $0.50-2.00 | 2-8s |
+| Qwen3 | ✅ | $0.10-0.50 | 1-5s |
+| Claude | ✅ | $3-15 | 2-5s |
+| Perplexity | ✅ | $3-15 | 2-10s |
+| Chutes | ✅ | $0.15-1.00 | 1-3s |
+| Vanta | ✅ | $0.50-2.00 | 200-800ms |
+| xAI | ✅ | $0.30-3.00 | 500-1500ms |
+
+**To Activate Qwen3:** Add `QWEN_API_KEY` (HuggingFace token) to environment
+
+---
+
 ## Tomorrow's Work Queue
 
 ### Completed Today
 - ✅ Integrate MiniMax into Athena (speed path)
-- ✅ Disable Precog
-- ✅ Fix cache warmer cron (middleware fix deployed)
+- ✅ Integrate DeepSeek R1 (reasoning + reasoning trace)
+- ✅ Integrate Qwen3 (agentic workflows)
+- ✅ Fix cache warmer cron
 - ✅ Fix TypeScript errors
 
 ### In Progress / Pending
 
-### 1. Portfolio Lab Demo Bug
+### 1. Oracle Toggle (Simple/Deep Mode)
+- UI toggle needed in Oracle chat
+- Conditionally render simple vs deep output
+- Simple: 1-2 sentences, emoji indicators
+- Deep: Full reasoning trace + signals + citations
+
+### 2. Portfolio Lab Demo Bug
 - Demo users seeing $0 in Portfolio Lab
 - `/api/user/profile` returns 500 for demo users
 - Demo holdings don't carry through
 
-### 2. Oracle Enhancements (Future)
-- Expand Bittensor subnet integration (MANTIS, BitQuant, Desearch exports)
-- Research additional closed models (DeepSeek R1, etc.)
+### 3. Enable Additional Subnets
+- Desearch (SN22) — Export from file, integrate
+- BitQuant (SN15) — DeFi analysis
+- Numinous (SN6) — Event forecasting
+- Gopher (SN42) — News/filings scraping
 
-### 3. Data Providers (Q2 Roadmap)
-- Morningstar integration ($25-50K/year)
-- Plaid account aggregation
-
-### 4. Infrastructure
-- Chrome extension automation (low priority)
-- Local dev server pre-warming (optional)
+### 4. API Keys Needed
+- `DEEPSEEK_API_KEY` — DeepSeek R1
+- `QWEN_API_KEY` — Qwen3 (HuggingFace)
