feat(oracle): add personality + memory system
- Update system prompt to be fun, flexible, warm
- Add oracle-memory.ts for conversation persistence
- Memory uses existing Conversation model in Prisma
- Extracts topics/stock tickers automatically
- Non-blocking saves for performance

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -271,34 +271,150 @@ Layer 4: Dual-mode Response (Simple/Deep)
 
 ---
 
+## Founder Architecture Refactor (9:00 PM+)
+
+### ChatGPT Feedback Received
+**Core Issue:** Oracle had meta-routing overload (LLM + Signal + Social/Event routing layers)
+**Fix:** Simplify to CORE THINKING ENGINE + SIGNAL AUGMENTATION BUS
+
+**New Architecture:**
+```
+ORACLE CORE (always active)
+├── MiniMax (speed)
+├── DeepSeek R1 (reasoning)
+└── Claude (synthesis)
+
+SIGNAL AUGMENTATION BUS (parallel, confidence only)
+├── Vanta ─┐
+├── MANTIS ├─→ Modify confidence, NEVER route
+├── BitQuant│
+├── xAI ───┘
+└── Desearch
+
+CONDITIONAL (on-demand)
+├── Perplexity (research)
+├── Numinous (events)
+└── Gopher (real-time)
+
+FORECASTING MODIFIERS
+└── Precog → Confidence only, NOT a route
+```
+
+**Flow:** hypothesis → evidence gathering → adjudication
+
+**Key Changes:**
+1. **Simplified routing** — Core sources always run; signals augment
+2. **Precog re-enabled** — As confidence modifier only, not a route
+3. **Signal Augmentation Bus** — Never routes, only modifies confidence
+4. **Qwen3 marked pending** — API key in Chinese, not accessible
+
+**Commit:** `9eae598` — "feat(athena): founder architecture refactor - core + signal augmentation separation"
+
+---
+
 ## Tomorrow's Work Queue
 
 ### Completed Today
 - ✅ Integrate MiniMax into Athena (speed path)
 - ✅ Integrate DeepSeek R1 (reasoning + reasoning trace)
-- ✅ Integrate Qwen3 (agentic workflows)
+- ✅ **Founder Architecture Refactor** — Core + Signal Augmentation separation
+- ✅ Qwen3 added (marked pending)
 - ✅ Fix cache warmer cron
 - ✅ Fix TypeScript errors
+- ✅ Commit + Push (`9eae598`)
 
 ### In Progress / Pending
 
-### 1. Oracle Toggle (Simple/Deep Mode)
+### 1. Test New Architecture
+- Deploy from Vercel (auto-triggered from commit)
+- Test Oracle with new routing
+- Verify signals modify confidence, not routing
+
+### 2. Oracle Toggle (Simple/Deep Mode)
 - UI toggle needed in Oracle chat
 - Conditionally render simple vs deep output
 - Simple: 1-2 sentences, emoji indicators
 - Deep: Full reasoning trace + signals + citations
 
-### 2. Portfolio Lab Demo Bug
+### 3. Portfolio Lab Demo Bug
 - Demo users seeing $0 in Portfolio Lab
 - `/api/user/profile` returns 500 for demo users
-- Demo holdings don't carry through
 
-### 3. Enable Additional Subnets
-- Desearch (SN22) — Export from file, integrate
+### 4. Enable Additional Subnets
+- Desearch (SN22) — Export from file
 - BitQuant (SN15) — DeFi analysis
 - Numinous (SN6) — Event forecasting
-- Gopher (SN42) — News/filings scraping
+- Gopher (SN42) — News/filings
 
-### 4. API Keys Needed
+### 5. API Keys Needed
 - `DEEPSEEK_API_KEY` — DeepSeek R1
-- `QWEN_API_KEY` — Qwen3 (HuggingFace)
+- `QWEN_API_KEY` — (marked pending, not urgent)
+
+---
+
+## Oracle Refinements (9:15 PM+)
+
+### User Feedback Received
+1. **Flexibility** — Don't be rigid about asset allocation
+2. **Fun Personality** — Be warm, curious, like a friend
+3. **Memory** — Remember conversations, learn over time
+
+### Changes Made
+
+**1. System Prompt Updated:**
+```
+"You are Maven Oracle, a smart, friendly wealth assistant that feels like talking 
+to a knowledgeable friend who's great with money."
+```
+- Warm, approachable, genuinely helpful
+- Curious about what they want to explore
+- Direct when it matters, casual when it doesn't
+- Not a compliance robot — a thinking partner
+
+**2. Memory System Added** (`oracle-memory.ts`):
+- Uses existing `Conversation` model in Prisma
+- Stores all Oracle messages with topic extraction
+- Builds context for future conversations
+- Non-blocking saves (doesn't slow responses)
+- Extracts stock tickers/topics automatically
+
+**3. Personality Traits:**
+- References conversation history ("As we discussed...")
+- Tracks topics of interest over time
+- Knows total conversation count
+- Can be detailed or casual based on context
+
+---
+
+## Today's Complete Wrap-Up
+
+### ✅ Completed
+| Item | Status |
+|------|--------|
+| DeepSeek R1 | Integrated — reasoning with visible trace |
+| MiniMax | Integrated — speed path via OpenClaw |
+| Qwen3 | Added to code (pending API key) |
+| Founder Architecture Refactor | Core + Signal Augmentation separation |
+| Oracle Personality | Fun, flexible, warm |
+| Memory System | Remembers conversations + learns topics |
+| Build | Passing |
+| Commit | Pushed (`9eae598`) |
+
+### ⏳ Pending
+| Item | Priority |
+|------|----------|
+| Test New Architecture | High |
+| Portfolio Lab Demo Bug ($0) | High |
+| Oracle Toggle (Simple/Deep) | Medium |
+| Desearch Export | Low |
+
+---
+
+## Pantheon Tasks (Tonight/Next Session)
+
+1. **Debug Portfolio Lab** — Demo users seeing $0
+2. **Test Oracle** — Verify new architecture works
+3. **Export Desearch** — Integrate into signals
+4. **Oracle Toggle** — Simple/Deep mode UI
+5. **Morningstar Integration** — Q2 roadmap
+6. **Plaid Aggregation** — Q2 roadmap
