fix(advisor): Oracle context bug - send structured object instead of string
The root cause was sending context as a formatted string, but the
API expects a structured object that matches parseLocalStorageProfile.

Changes:
- AdvisorOracle now sends structured context object with all client
  fields (firstName, age calculated from dateOfBirth, holdings,
  allocation, accounts, etc.)
- Added dateOfBirth and state to ClientContext interface
- Updated client detail page to pass dateOfBirth and state

Also adds Oracle to main advisor dashboard with research assistant
toggle button.

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -37,4 +37,14 @@
 - [ ] Verify demo mode works end-to-end
 - [ ] Investigate other bugs from Feb 12 Pantheon session (if any exist)
 
+## New Feature: Advisor Oracle (Built Feb 13)
+- Created `AdvisorOracle.tsx` component
+- Integrated into client detail page (`/advisor/clients/[id]`)
+- Features:
+  - Client context awareness (holdings, allocation, risk tolerance, notes)
+  - 8 quick action buttons: Analyze, Meeting Prep, Tax Opportunities, Stress Test, Rebalance, Reallocate, Key Insights, Interview Questions
+  - Floating panel with chat interface
+  - Passes full client data to Oracle API for context-aware responses
+- Committed and pushed to Vercel
+
 ---
