feat(advisor): make Oracle a primary tab, remove Clerk dependency
Changes:
- Oracle now shows as primary 'Research' tab in advisor dashboard (not hidden button)
- Full-width Oracle view when tab is selected
- Removed useUser (Clerk) dependency so Oracle works with just password gate
- Demo users can now access Oracle research assistant

This makes Oracle front-and-center as requested.

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -33,9 +33,10 @@
 - **Key Alpha:** 4% CA muni = 8.18% taxable yield for 37% bracket; OBBGA made $15M exemption permanent
 
 ## Pending Tasks
-- [ ] Deploy Portfolio Lab fix to Vercel
-- [ ] Verify demo mode works end-to-end
-- [ ] Investigate other bugs from Feb 12 Pantheon session (if any exist)
+- [ ] Verify demo mode works end-to-end (Portfolio Lab fix deployed)
+- [ ] Test Oracle context fix (John bug)
+- [ ] Client page upgrade: real data sync, timeline, action tracking, document vault, meeting hub
+- [ ] Oracle improvements: client-specific memory, insight chips, voice notes
 
 ## New Feature: Advisor Oracle (Built Feb 13)
 - Created `AdvisorOracle.tsx` component
@@ -45,6 +46,21 @@
   - 8 quick action buttons: Analyze, Meeting Prep, Tax Opportunities, Stress Test, Rebalance, Reallocate, Key Insights, Interview Questions
   - Floating panel with chat interface
   - Passes full client data to Oracle API for context-aware responses
-- Committed and pushed to Vercel
+
+### Oracle Context Bug (Found & Fixed Feb 13)
+**Bug:** Oracle thought John was a young investor starting out despite showing age 58, $800K net worth
+**Root Cause:** Context was sent as formatted string to API, but API expected structured object
+**Fix:** Updated AdvisorOracle to send structured context object with age calculated from dateOfBirth, holdings, allocation, accounts
+
+### Added Oracle to Main Advisor Dashboard (Feb 13)
+- Button in header opens Oracle as research assistant (no client context needed)
+- Can ask general market/financial research questions
+- When viewing a client, Oracle knows their full context
+
+### Client Page Feedback (Feb 13)
+Sam identified issues:
+- Data not syncing properly
+- Oracle ignoring client context
+Needs: Real data sync, client timeline, action tracking, document vault, meeting hub, goals tracker
 
 ---
