feat(partners): add Research tab to partners dashboard
Add Oracle as a primary Research tab in the partners dashboard,
just like the advisor dashboard. Click the Research button in the
header to access the Maven Oracle research assistant.

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -35,8 +35,9 @@
 ## Pending Tasks
 - [ ] Verify demo mode works end-to-end (Portfolio Lab fix deployed)
 - [ ] Test Oracle context fix (John bug)
-- [ ] Client page upgrade: real data sync, timeline, action tracking, document vault, meeting hub
+- [ ] Client page upgrade: real data sync, timeline, action tracking, document vault, meeting hub, goals tracker
 - [ ] Oracle improvements: client-specific memory, insight chips, voice notes
+- [ ] Oracle in main advisor dashboard - verify visible and working
 
 ## New Feature: Advisor Oracle (Built Feb 13)
 - Created `AdvisorOracle.tsx` component
@@ -57,10 +58,16 @@
 - Can ask general market/financial research questions
 - When viewing a client, Oracle knows their full context
 
+### Oracle as Primary Tab (Feb 13)
+- Oracle is now a primary "Research" tab in advisor dashboard (not hidden button)
+- Full-width Oracle view when tab is selected
+- Removed Clerk dependency so it works with just password gate
+- Demo users can now access Oracle (password: BanksNavy10)
+
 ### Client Page Feedback (Feb 13)
 Sam identified issues:
 - Data not syncing properly
-- Oracle ignoring client context
+- Oracle ignoring client context (FIXED - context now sent as structured object)
 Needs: Real data sync, client timeline, action tracking, document vault, meeting hub, goals tracker
 
 ---
