feat(partners): enhance market data and Research tab
Market tiles:
- Replace Bittensor with broader indices (NASDAQ, Dow, Russell 2000)
- Make tiles clickable (link to analysis page)
- Show sparklines

Research tab:
- Add stock search bar at top
- Add popular stocks quick-pills (SPY, QQQ, AAPL, NVDA, MSFT, GOOGL)
- Users can search any stock symbol for research

This makes the Research tab robust for stock research - advisors
can look up any ticker and get instant analysis.

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -37,7 +37,7 @@
 - [ ] Test Oracle context fix (John bug)
 - [ ] Client page upgrade: real data sync, timeline, action tracking, document vault, meeting hub, goals tracker
 - [ ] Oracle improvements: client-specific memory, insight chips, voice notes
-- [ ] Oracle in main advisor dashboard - verify visible and working
+- [ ] Verify Research tab visible and working in Partners dashboard
 
 ## New Feature: Advisor Oracle (Built Feb 13)
 - Created `AdvisorOracle.tsx` component
@@ -69,5 +69,34 @@ Sam identified issues:
 - Data not syncing properly
 - Oracle ignoring client context (FIXED - context now sent as structured object)
 Needs: Real data sync, client timeline, action tracking, document vault, meeting hub, goals tracker
+
+### Partners Dashboard Simplification (Feb 13)
+Sam's feedback: "Take out risk score, rebalances needed, YTD return — ambiguous and premature."
+
+**Removed:**
+- YTD Return (whose benchmark?)
+- Avg Risk Score
+- Above/Below Target
+- Tax Alpha Saved
+- Rebalances Needed
+
+**Kept:**
+- Total AUM + growth %
+- Clients + avg size
+- Today's Meetings
+- Action Items
+
+**Added - Real Market Data:**
+- S&P 500
+- Bitcoin
+- 10Y Treasury
+- Fed Funds Rate
+- TAO (Bittensor)
+
+These are verifiable, defensible numbers. No model assumptions.
+
+### Added Oracle to Partners Dashboard (Feb 13)
+- Research tab in partners dashboard, same as advisor dashboard
+- Accessible to demo users (no Clerk auth required)
 
 ---
