fix(partners): make Research button more visible in quick actions
Add Research as first quick action with purple gradient background
to make it more prominent and obvious to users.

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -99,4 +99,20 @@ These are verifiable, defensible numbers. No model assumptions.
 - Research tab in partners dashboard, same as advisor dashboard
 - Accessible to demo users (no Clerk auth required)
 
+### Enhanced Market Data & Research Tab (Feb 13)
+**Sam's Feedback:** "Take out Bittensor, add other broad indices. Make clickable with charting. Research function needs to be above and beyond."
+
+**Changes:**
+- Replaced TAO with broader indices: S&P 500, NASDAQ, Dow Jones, Russell 2000
+- Made tiles clickable (link to /partners/analysis?symbol=X)
+- Added sparklines to each tile
+- Added stock search bar to Research tab
+- Added popular stocks quick-pills: SPY, QQQ, AAPL, NVDA, MSFT, GOOGL
+
+**Research Tab Capabilities:**
+- Type any stock symbol for instant research
+- Gets: current price, analyst ratings, P/E, market cap, dividend, news, recommendation
+- Clickable pills for quick access
+- Integrates with existing quick actions (Analyze Portfolio, Meeting Prep, Tax Opportunities, etc.)
+
 ---
